--- a/test/fixtures/trips.yml
+++ b/test/fixtures/trips.yml
@@ -1,3 +1,19 @@
+# == Schema Information
+#
+# Table name: trips
+#
+#  id          :integer          not null, primary key
+#  trip_name   :string(255)
+#  trip_date   :string(255)
+#  description :text
+#  fave_memory :string(255)
+#  photo       :string(255)
+#  city_id     :integer
+#  user_id     :integer
+#  created_at  :datetime
+#  updated_at  :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
